<?xml version="1.0" encoding="utf-8"?><!--
The MIT License (MIT)

Copyright (c) 2016

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
-->
<resources>
    <string name="app">Fall Detector (Experimental)</string>
    <string name="settings">Settings</string>
    <string name="signals">View Signals</string>
    <string name="guardian">Guardian</string>
    <string name="title">Guardian\'s phone number</string>
    <string name="summary">Please set guardian\'s phone number here</string>
    <string name="contact">Contact</string>
    <string name="phone">Guardian\'s phone number</string>
    <string name="search">Search Contacts</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="help">Help</string>
</resources>
