<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/help"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/help" />

        <Button
            android:id="@+id/settings"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/settings" />
    </LinearLayout>

    <Button
        android:id="@+id/signals"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/signals" />

    <WebView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>